# SimpleReg

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  requirements.txt  setup.py  simplereg_convert_regaladin_to_sitk_transform.py  simplereg_convert_sitk_to_regaladin_transform.py  simplereg_estimate_landmarks.py  simplereg_register_landmarks.py  simplereg_resample.py  simplereg_transform.py  simplereg_transform_image.py
doc/: doxyfile
registrationtools/: FLIRT.py  NiftyReg.py  RegistrationBase.py  SimpleItkRegistration.py  SimpleItkRegistrationBase.py  WrapItkRegistration.py  WrapperRegistration.py  definitions.py  requirements.txt
simplereg/: FLIRT.py  NiftyReg.py  RegistrationBase.py  SimpleItkRegistration.py  SimpleItkRegistrationBase.py  WrapItkRegistration.py  WrapperRegistration.py  __about__.py  __init__.py  data_reader.py  data_writer.py  definitions.py  flirt.py  flirt_to_simpleitk_converter.py  landmark_estimator.py  landmark_visualizer.py  nibabel_to_simpleitk_converter.py  niftyreg.py  niftyreg_to_simpleitk_converter.py  point_based_registration.py  resampler.py  simple_itk_registration.py  simple_itk_registration_base.py  utilities.py  wrap_itk_registration.py  wrapper_registration.py
simplereg/mind/cli/source/: CMakeLists.txt  runVectorImageRegistration.cpp
test/: TestFLIRT.py  TestNiftyReg.py  TestSimpleItkRegistration.py  TestWrapItkRegistration.py  flirt_test.py  runTests.py  simple_itk_registration_test.py  wrap_itk_registration_test.py
tests/: application_test.py  flirt_test.py  installation_test.py  landmark_registration_test.py  run_tests.py  (+6 more)
(+27 files in other folders)
